@@ -1,0 +1,9 @@
+Title: Fixed broken "Global settings" when having the Event Console disabled via "omd config"
+Level: 1
+Component: wato
+Compatible: compat
+Version: 1.4.0i4
+Date: 1482313552
+Class: fix
+
+
